# softfido

./: Cargo.toml  README.md  build.rs  rustfmt.toml
poke/: usbip.pk  util.pk
python/: Makefile  softfido_tests.py
src/: bindings.h  binio.rs  crypto.rs  ctap2.rs  ctaphid.rs  error.rs  eventloop.rs  future.rs  hex.rs  hid.rs  k_usbip_common.h  lib.rs  log.rs  macros.rs  main.rs  prompt.rs  u2f.rs  usb.rs  usbip.rs  usbip_network.h  x.h
