[package]
name = "softfido"
version = "0.1.0"
authors = ["Helmut Eller <eller.helmut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.3"
packed_struct_codegen = "0.3"
# bitflags = "1.1.0"
rand = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10.2"
pkcs11 = "0.4.1"
rust-crypto = "^0.2"  # TODO: remove
libc = "0.2"  # TODO: still needed?
pinentry-rs = "0.1.0"
secstr = "0.3.2"
x509 = "0.1.2"
chrono = "0.4"
cookie-factory = "0.3.0"

[build-dependencies]
bindgen = "0.52.0"
