[package]
name = "softfido"
version = "0.1.0"
authors = ["Helmut Eller <eller.helmut@gmail.com>"]
edition = "2018"

exclude = ["python"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10.2"
pkcs11 = "0.4.1"
pinentry-rs = "0.1.0"
secstr = "0.3.2"
x509 = "0.1.2"
chrono = "0.4"
cookie-factory = "0.3.0"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.52.0"
