[package]
name = "softfido"
version = "0.1.0"
authors = ["Helmut Eller <eller.helmut@gmail.com>"]
edition = "2018"

exclude = ["python"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10.2"
#pkcs11 = "0.4.1"
#cryptoki = "0.4.1"
cryptoki = { path = "/scratch/rust/rust-cryptoki/cryptoki" }
#secstr = "0.4.0"
#pinentry = "0.5.0"
pinentry = { path = "/scratch/rust/pinentry-rs" }
secrecy = "0.8.0"
x509 = "0.1.2"
chrono = "0.4"
cookie-factory = "0.3.0"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.64.0"
